<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/fui_ic_anonymous_white_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_rec"
            android:icon="@drawable/ic_rec"
            android:title="@string/record" />
        <item
            android:id="@+id/nav_challenges"
            android:icon="@drawable/ic_challenges"
            android:title="@string/challenges" />

    </group>


</menu>